--- a/Index.html
+++ b/Index.html
@@ -8,45 +8,49 @@
 </head>
 <body>
 <div class="card-area">
-<div class="card">
-    <a href="https://www.zillow.com/homedetails/3934-E-Ashlan-Ave-Fresno-CA-93726/82851563_zpid/"
-       target="_blank">
-<div class="picture-section">
-    <div class="update">
-        2 days on Zillow
-    </div>
-<img class="picture" src="https://photos.zillowstatic.com/fp/db0d5ed936f421663326413a4fe0b262-cc_ft_576.webp" alt="house">
-<div class="company">
-Home Stakers Ltd.
-</div>
-</div>
-<div class="info">
-<div class="listing">
-    <div class="price">
-        $325,000
-    </div>
-    <div>
-        <strong>3</strong> beds | <strong>1</strong> baths | <strong>1,076</strong> sqft
-    </div>
-</div>
-<div class="address">
-    3934 E Ashlan Ave, Fresno, CA 93726
-</div>
-<div class="type">
-  &#127969  House for Sale
-</div>
-</div>
-
 
     <div class="card">
-        <a href="https://www.zillow.com/homedetails/3934-E-Ashlan-Ave-Fresno-CA-93726/82851563_zpid/"
-           target="_blank">
+        <a href="https://www.zillow.com/homedetails/3934-E-Ashlan-Ave-Fresno-CA-93726/82851563_zpid/" target="_blank">
             <div class="picture-section">
                 <div class="update">
                     2 days on Zillow
                 </div>
-                <img class="picture" src="https://photos.zillowstatic.com/fp/2edc0d60ede3ba662c4b6b1a820a02a9-cc_ft_1536.webp" alt="house2">
+                <img class="picture" src="https://photos.zillowstatic.com/fp/db0d5ed936f421663326413a4fe0b262-cc_ft_576.webp" alt="house">
                 <div class="company">
+                    Home Stakers Ltd.
+                </div>
+            </div>
+            <div class="info">
+                <div class="listing">
+                    <div class="price">
+                        $325,000
+                    </div>
+                    <div>
+                        <strong>3</strong> beds | <strong>1</strong> baths | <strong>1,076</strong> sqft
+                    </div>
+                </div>
+                <div class="address">
+                    3934 E Ashlan Ave, Fresno, CA 93726
+                </div>
+                <div class="type">
+                    &#127969  House for Sale
+                </div>
+            </div>
+        </a>
+    </div>
+
+
+    <div class="card">
+        <a href="https://www.zillow.com/homedetails/6640-N-Barton-Ave-Fresno-CA-93710/18705554_zpid/?" target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    5 hours on Zillow
+                </div>
+                <div class="star">
+                    ⭐
+                </div>
+                <img class="picture" src="https://photos.zillowstatic.com/fp/2edc0d60ede3ba662c4b6b1a820a02a9-cc_ft_1536.webp" alt="house2">
+                 <div class="company">
                     Home Stakers Ltd.
                 </div>
             </div>
@@ -56,25 +60,96 @@ Home Stakers Ltd.
                         $524,000
                     </div>
                     <div>
-                        <strong>3</strong> bds | <strong>2</strong> ba | <strong>1,599</strong> sqft
+                        <strong>3</strong> bd | <strong>2</strong> ba | <strong>1,599</strong> sqft
                     </div>
                 </div>
                 <div class="address">
                     6640 N Barton Ave, Fresno, CA 93710
                 </div>
                 <div class="type">
-                    &#2728 Auction
+                    &#127969  Auction
                 </div>
             </div>
+        </a>
+    </div>
+
 
     <div class="card">
-        <a href="https://www.zillow.com/homedetails/3934-E-Ashlan-Ave-Fresno-CA-93726/82851563_zpid/"
-           target="_blank">
+        <a href="https://www.zillow.com/homedetails/6644-N-Fresno-St-Fresno-CA-93710/18702521_zpid/" target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    5 days on Zillow
+
+                </div>
+                <div class="favorite">
+                    ❤️
+                </div>
+                <img class="picture" src="https://photos.zillowstatic.com/fp/f51efec18512e93d96684c7cf7e23505-cc_ft_1536.webp" alt="house3">
+                <div class="company">
+                    Home Stakers Ltd.
+                </div>
+            </div>
+            <div class="info">
+                <div class="listing">
+                    <div class="price">
+                        $410,000
+                    </div>
+                    <div>
+                        <strong>4</strong> bd | <strong>3</strong> ba | <strong>1,837</strong> sqft
+                    </div>
+                </div>
+                <div class="address">
+                    6644 N Fresno St, Fresno, CA 93710
+                </div>
+                <div class="type">
+                    &#127969  House for Sale
+                </div>
+            </div>
+        </a>
+    </div>
+
+
+    <div class="card">
+        <a href="https://www.zillow.com/homedetails/1662-E-Fox-Glen-Ave-Fresno-CA-93730/18647967_zpid/" target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    5 days on Zillow
+                </div>
+                <div class="star">
+                    ⭐
+                </div>
+                <img class="picture" src="https://photos.zillowstatic.com/fp/27a54b6e7e340ea65ebf41124efdf506-cc_ft_960.webp" alt="house4">
+                <div class="company">
+                    Home Stakers Ltd.
+                </div>
+            </div>
+            <div class="info">
+                <div class="listing">
+                    <div class="price">
+                        $1,260,000
+                    </div>
+                    <div>
+                        <strong>4</strong> bd | <strong>4</strong> ba | <strong>2,945</strong> sqft
+                    </div>
+                </div>
+                <div class="address">
+                    1662 E Fox Glen Ave, Fresno, CA 93730
+                </div>
+                <div class="type">
+                    &#127969  House for Sale
+                </div>
+            </div>
+        </a>
+    </div>
+
+
+    <div class="card">
+        <a href="https://www.zillow.com/homedetails/532-E-Fountain-Way-Fresno-CA-93704/18731312_zpid/" target="_blank">
             <div class="picture-section">
                 <div class="update">
                     2 days on Zillow
                 </div>
-                <img class="picture" src="https://photos.zillowstatic.com/fp/db0d5ed936f421663326413a4fe0b262-cc_ft_576.webp" alt="house">
+                <img class="picture" src="https://photos.zillowstatic.com/fp/8beae94d1178687b7987e8ef86a1ff5c-cc_ft_960.webp" alt="house5">
                 <div class="company">
                     Home Stakers Ltd.
                 </div>
@@ -85,108 +160,18 @@ Home Stakers Ltd.
                         $325,000
                     </div>
                     <div>
-                        <strong>3</strong> beds | <strong>1</strong> baths | <strong>1,076</strong> sqft
+                        <strong>3</strong> bd | <strong>1</strong> ba | <strong>1,248</strong> sqft
                     </div>
                 </div>
                 <div class="address">
-                    3934 E Ashlan Ave, Fresno, CA 93726
+                    532 E Fountain Way, Fresno, CA 93704
                 </div>
                 <div class="type">
-                    &#127969  House for Sale
+                    🔨   Pre-Qualified
                 </div>
             </div>
-
-    <div class="card">
-    <a href="https://www.zillow.com/homedetails/3934-E-Ashlan-Ave-Fresno-CA-93726/82851563_zpid/"
-       target="_blank">
-        <div class="picture-section">
-            <div class="update">
-                2 days on Zillow
-            </div>
-            <img class="picture" src="https://photos.zillowstatic.com/fp/db0d5ed936f421663326413a4fe0b262-cc_ft_576.webp" alt="house">
-            <div class="company">
-                Home Stakers Ltd.
-            </div>
-        </div>
-        <div class="info">
-            <div class="listing">
-                <div class="price">
-                    $325,000
-                </div>
-                <div>
-                    <strong>3</strong> beds | <strong>1</strong> baths | <strong>1,076</strong> sqft
-                </div>
-            </div>
-            <div class="address">
-                3934 E Ashlan Ave, Fresno, CA 93726
-            </div>
-            <div class="type">
-                &#127969  House for Sale
-            </div>
-        </div>
-
-    <div class="card">
-    <a href="https://www.zillow.com/homedetails/3934-E-Ashlan-Ave-Fresno-CA-93726/82851563_zpid/"
-       target="_blank">
-        <div class="picture-section">
-            <div class="update">
-                2 days on Zillow
-            </div>
-            <img class="picture" src="https://photos.zillowstatic.com/fp/db0d5ed936f421663326413a4fe0b262-cc_ft_576.webp" alt="house">
-            <div class="company">
-                Home Stakers Ltd.
-            </div>
-        </div>
-        <div class="info">
-            <div class="listing">
-                <div class="price">
-                    $325,000
-                </div>
-                <div>
-                    <strong>3</strong> beds | <strong>1</strong> baths | <strong>1,076</strong> sqft
-                </div>
-            </div>
-            <div class="address">
-                3934 E Ashlan Ave, Fresno, CA 93726
-            </div>
-            <div class="type">
-                &#127969  House for Sale
-            </div>
-        </div>
-
-    <div class="card">
-        <a href="https://www.zillow.com/homedetails/3934-E-Ashlan-Ave-Fresno-CA-93726/82851563_zpid/"
-           target="_blank">
-            <div class="picture-section">
-                <div class="update">
-                    2 days on Zillow
-                </div>
-                <img class="picture" src="https://photos.zillowstatic.com/fp/db0d5ed936f421663326413a4fe0b262-cc_ft_576.webp" alt="house">
-                <div class="company">
-                    Home Stakers Ltd.
-                </div>
-            </div>
-            <div class="info">
-                <div class="listing">
-                    <div class="price">
-                        $325,000
-                    </div>
-                    <div>
-                        <strong>3</strong> beds | <strong>1</strong> baths | <strong>1,076</strong> sqft
-                    </div>
-                </div>
-                <div class="address">
-                    3934 E Ashlan Ave, Fresno, CA 93726
-                </div>
-                <div class="type">
-                    &#127969  House for Sale
-                </div>
-            </div>
-
-
+        </a>
+    </div>
 </div>
-
-
-
 </body>
 </html>
