--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewpoint" content="width-device-width">
     <title>Zillow Mockups</title>
  <link href="Style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet"/>
 </head>
 <body>
 <div class="card-area">
